test/files/parser/errors/incomplete-assign.otest
name = "Incomplete assign"
line = 3
character = 1
error = 'Expected value after "=".'

---

test =
